# raytrace

./: .gitignore  CMakeLists.txt  color.h  hittable.h  main.cc  ray.h  sphere.h  vec3.h
